[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.2"
dotenv = "0.15.0"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.24.1", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
